--- a/index.html
+++ b/index.html
@@ -656,9 +656,11 @@
    .hero-header {
         display: flex;
         flex-direction: row;
-        align-items: flex-end; /* Align bottoms of logo-col and nav-col */
+        /* Align tops of the columns */
+        align-items: flex-start;
         justify-content: space-between;
         padding: 0 4vw 0 2vw;
+        /* Reverted margin-top to original */
         margin-top: 14px;
         width: 100vw;
         max-width: 100vw;
@@ -677,11 +679,12 @@
         margin-right: 0px;
         margin-top: 0px;
         margin-bottom: 0;
+        position: relative; /* Make this column a positioning context for the absolute box */
     }
 
     .logo-circle {
         padding: 8px;
-        margin-bottom: 10px; /* Retain space between logo and the box */
+        margin-bottom: 10px; /* Retain space between logo and where the box *would* start if not absolute */
     }
 
     /* Show the collected toads box on mobile */
@@ -689,9 +692,15 @@
         display: block; /* Show on mobile */
         width: 150px; /* Keeping width at 150px as before */
         height: 150px; /* Keeping height at 150px as before */
-        margin-top: auto; /* Pushes the box to the bottom of the flex column */
-        margin-left: 0; /* Align to the left of the logo column */
-        margin-right: auto; /* Keep it aligned left */
+        
+        /* Position absolutely within hero-logo-col */
+        position: absolute;
+        bottom: 0; /* Align its base to the bottom of hero-logo-col */
+        left: 0; /* Align to the left of hero-logo-col */
+        
+        margin-top: 0; /* Remove auto margin as absolute positioning handles this */
+        margin-left: 0; /* Ensure no extra margin */
+        margin-right: auto; /* Ensure no extra margin */
     }
 
     .hero-nav-col {
@@ -704,7 +713,8 @@
         max-width: 50%; /* Ensure it doesn't grow beyond this */
         margin: 0;
         padding: 0;
-        margin-top: 0px;
+        /* Add auto margin to push content to bottom, aligning with the absolutely positioned box */
+        margin-top: auto;
     }
     .hero-nav-title {
         text-align: right; /* Keep text aligned to the right */
@@ -731,7 +741,7 @@
             0px 1.5px 0 #000,
             -1.5px 0px 0 #000,
             1.5px 0px 0 #000;
-        margin-bottom: 0 !important; /* Removed margin-bottom to align with box base */
+        margin-bottom: 0 !important; /* Ensure no bottom margin pushes it further */
         margin-top: 0;
         word-break: break-word;
         hyphens: auto;
@@ -854,7 +864,8 @@
         width: 100vw; /* Take full viewport width */
         aspect-ratio: 1 / 0.9;
         overflow: hidden;
-        margin: 0 0 10px 0; /* Align to edge, add bottom margin */
+        /* Increased margin-bottom to create more space below the banner */
+        margin: 0 0 50px 0; /* Aligned to edge, added significant bottom margin */
         border-radius: 0;
 
         /* APPLY THE WHITE BORDER HERE (to the container) */
@@ -1435,7 +1446,7 @@
                         hoppingToad.style.height = frogRect.height + 'px';
 
                         // Calculate target position in the collectedToadsGrid
-                        const gridRect = collectedToadsToadGrid.getBoundingClientRect();
+                        const gridRect = collectedToadsGrid.getBoundingClientRect();
                         const toadWidth = gridRect.width / 4;
                         const toadHeight = gridRect.height / 4;
 
