--- a/index.html
+++ b/index.html
@@ -654,13 +654,11 @@
         font-size: 15px;
     }
    .hero-header {
-        display: flex;
+        display: flex; /* Changed from grid to flex for better alignment control */
         flex-direction: row;
-        /* Align tops of the columns */
-        align-items: flex-start;
+        align-items: flex-end; /* Align bottoms of logo-col and nav-col */
         justify-content: space-between;
         padding: 0 4vw 0 2vw;
-        /* Reverted margin-top to original */
         margin-top: 14px;
         width: 100vw;
         max-width: 100vw;
@@ -670,55 +668,47 @@
     }
 
     .hero-logo-col {
+        /* Removed grid-area: logo; as hero-header is now flex */
         display: flex;
         flex-direction: column; /* Stack logo and new box */
         align-items: flex-start; /* Align logo and box to the left */
-        justify-content: flex-start; /* Keep logo at the top of its column */
-        flex: 0 0 50%; /* Set logo column to 50% */
-        max-width: 50%; /* Ensure it doesn't grow beyond this */
+        justify-content: flex-end; /* Push logo and box to the bottom of this column */
+        flex: 0 0 auto;
         margin-right: 0px;
         margin-top: 0px;
         margin-bottom: 0;
-        position: relative; /* Make this column a positioning context for the absolute box */
     }
 
     .logo-circle {
         padding: 8px;
-        margin-bottom: 10px; /* Retain space between logo and where the box *would* start if not absolute */
+        margin-bottom: 10px; /* Space between logo and new box */
     }
 
     /* Show the collected toads box on mobile */
     .collected-toads-box {
         display: block; /* Show on mobile */
-        width: 150px; /* Keeping width at 150px as before */
-        height: 150px; /* Keeping height at 150px as before */
-        
-        /* Position absolutely within hero-logo-col */
-        position: absolute;
-        bottom: 0; /* Align its base to the bottom of hero-logo-col */
-        left: 0; /* Align to the left of hero-logo-col */
-        
-        margin-top: 0; /* Remove auto margin as absolute positioning handles this */
-        margin-left: 0; /* Ensure no extra margin */
-        margin-right: auto; /* Ensure no extra margin */
+        /* Removed grid-area: toads-box; as hero-header is now flex */
+        margin-top: 0; /* Margin handled by logo-circle's margin-bottom */
+        margin-left: 0; /* Align to the left of the logo column */
+        margin-right: auto; /* Keep it aligned left */
     }
 
     .hero-nav-col {
+        /* Removed grid-area: nav; as hero-header is now flex */
         display: flex;
         flex-direction: column;
         align-items: flex-end; /* Keep alignment to the right for title/subtitle */
         justify-content: flex-end; /* Push title/subtitle to the bottom of this column */
         flex-grow: 1;
-        flex-basis: 50%; /* Set nav column to 50% */
-        max-width: 50%; /* Ensure it doesn't grow beyond this */
+        width: 100%; /* Take full width of its flex cell */
+        max-width: none;
         margin: 0;
         padding: 0;
-        /* Add auto margin to push content to bottom, aligning with the absolutely positioned box */
-        margin-top: auto;
+        margin-top: 0px;
     }
     .hero-nav-title {
         text-align: right; /* Keep text aligned to the right */
-        width: auto; /* Allow natural wrapping within its parent's constrained width */
+        width: 90%;
         font-size: 3rem;
         -webkit-text-stroke: 1.5px #000;
         text-stroke: 1.5px #000;
@@ -730,7 +720,7 @@
     }
     .hero-nav-subtitle {
         text-align: right; /* Keep text aligned to the right */
-        width: auto; /* Allow natural wrapping within its parent's constrained width */
+        width: 90%;
         font-size: 3rem;
         text-shadow:
             -1.5px -1.5px 0 #000,
@@ -741,7 +731,7 @@
             0px 1.5px 0 #000,
             -1.5px 0px 0 #000,
             1.5px 0px 0 #000;
-        margin-bottom: 0 !important; /* Ensure no bottom margin pushes it further */
+        margin-bottom: 18px;
         margin-top: 0;
         word-break: break-word;
         hyphens: auto;
@@ -864,8 +854,7 @@
         width: 100vw; /* Take full viewport width */
         aspect-ratio: 1 / 0.9;
         overflow: hidden;
-        /* Increased margin-bottom to create more space below the banner */
-        margin: 0 0 50px 0; /* Aligned to edge, added significant bottom margin */
+        margin: 0 0 10px 0; /* Align to edge, add bottom margin */
         border-radius: 0;
 
         /* APPLY THE WHITE BORDER HERE (to the container) */
@@ -890,6 +879,10 @@
         height: 100%; /* Image fills the container's *inner* space */
         object-fit: cover; /* Ensures image covers the area, cropping if needed */
         object-position: center;
+
+        /* IMPORTANT: Remove 'border' and 'box-sizing' from the image itself */
+        border: none; /* Make sure no border is on the image itself */
+        box-sizing: content-box; /* Revert to default for image */
 
         /* IMPORTANT: Do NOT set transform: none; here. This allows the global transform: scale(1.3); to apply for the "zoomed in" effect */
         /* If you want a specific zoom, you can explicitly set it here, e.g., transform: scale(1.3); */
@@ -1464,7 +1457,7 @@
                                 const translateY = targetY - frogRect.top;
 
                                 // Apply transform for the hop (with an upward arc) and fade out
-                                hoppingToad.style.transform = `translate(${translateX}px, ${targetY - frogRect.top - 50}px)`; /* Adjusted translateY for arc */
+                                hoppingToad.style.transform = `translate(${translateX}px, ${translateY}px) translateY(-50px)`;
                                 hoppingToad.style.transition = 'transform 0.8s cubic-bezier(.48,1.48,.56,.97), opacity 0.8s';
                                 hoppingToad.style.opacity = '0'; // Fade out as it reaches the destination
                             });
